# le-cpp-utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: config.cmake.in
include/le-cpp-utils/: consumer.h  debugmutex.h  envconfigloader.h  fileread.h  finally.h  jsonutility.h  logging.h  median.h  mtautoconfiguration.h  pairhash.h  persistentvalue.h  pimpl.h  signal.h  speedmonitor.h  subcommand.h  threadinterval.h  threadsafedata.h  threadsafeevent.h  threadsafequeue.h  time.h  timestring.h  uuid_v4.h  valueinfile.h  versioncompare.h  winutils.h
src/: fileread.cpp  jsonutility.cpp  mtautoconfiguration.cpp  signal.cpp  winutils.cpp
tests/: CMakeLists.txt  tst_compilation.cpp  tst_consumer.cpp  tst_finally.cpp  tst_jsonutility.cpp  tst_median.cpp  tst_mtautoconfiguration.cpp  tst_threadsafe.cpp  tst_threadsafequeue.cpp  tst_utilities.cpp  tst_uuid.cpp  tst_valueinfile.cpp  tst_versioncompare.cpp
